# OtherLibrary

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: CppSurfaceView.cpp  UtilPng.cpp
